[gd_scene load_steps=29 format=2]

[ext_resource path="res://Player/caywalksheet.png" type="Texture" id=1]
[ext_resource path="res://Test_Enemy_AI.gd" type="Script" id=2]
[ext_resource path="res://tets2.png" type="Texture" id=3]
[ext_resource path="res://tets.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 23, 0, 23, 58 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 23, 116, 23, 58 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 23, 58, 23, 58 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 23, 174, 23, 58 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 23, 58 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 23, 0, 23, 58 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 46, 0, 23, 58 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 69, 0, 23, 58 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 116, 23, 58 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 23, 116, 23, 58 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 46, 116, 23, 58 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 69, 116, 23, 58 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 58, 23, 58 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 23, 58, 23, 58 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 46, 58, 23, 58 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 69, 58, 23, 58 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 174, 23, 58 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 23, 174, 23, 58 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 46, 174, 23, 58 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 69, 174, 23, 58 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "down_resting",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "left_resting",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "right_resting",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "up_resting",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk_down",
"speed": 7.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walk_left",
"speed": 7.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "walk_right",
"speed": 7.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "walk_up",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 16.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 220.002

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11.5, 16.5 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="enemy" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "down_resting"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 11.5 )
shape = SubResource( 2 )

[node name="Detection Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Area"]
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.5, 11.5 )
shape = SubResource( 4 )

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -30.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[connection signal="body_entered" from="Detection Area" to="." method="_on_Detection_Area_body_entered"]
[connection signal="body_exited" from="Detection Area" to="." method="_on_Detection_Area_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
